# cs4home_examples

./: README.md  thirdparty.repos
cs4home_simple_project/: CMakeLists.txt  package.xml
cs4home_simple_project/config/: params_simple.yaml
cs4home_simple_project/include/cs4home_simple_project/: FaceAfferent.hpp  FaceCore.hpp  FaceEfferent.hpp
cs4home_simple_project/launch/: face_example.launch.py  yolo_example.launch.py
cs4home_simple_project/src/: FaceModule.cpp  YoloModule.cpp
cs4home_simple_project/src/cs4home_simple_project/: FaceAfferent.cpp  FaceCore.cpp  FaceEfferent.cpp  YoloAfferent.cpp  YoloCore.cpp  YoloEfferent.cpp
